z-index fix on NPC popover dialogs

--- a/styles/app/index.styl
+++ b/styles/app/index.styl
@@ -151,8 +151,12 @@ hr
 .modal-body
     margin: 10px
 
+.static-popover
+    z-index 0
+    display block
 
-// TODO this is supposed to go in avatar.styl, but fuck stylus
+
+// TODO this is supposed to go in avatar.styl, but stylus is breaking if I even touch that file
 .profile-modal-header
     width:560px
     margin: 0px auto
@@ -163,3 +167,5 @@ hr
     right 0px
     background-color #dfe9ea
     padding 1px 3px 1px 3px
+
+
